--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Simple Block Chain Mechanism in Typescript for Learning Purpose",
   "main": "./dist/bootstrap.js",
   "scripts": {
-    "start": "ts-node ./src/bootstrap.ts",
+    "start": "ts-node ./src/bootstrap.ts"
   },
   "repository": {
     "type": "git",
